Update 1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md

--- a/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
+++ b/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
@@ -9,7 +9,7 @@ Let’s dive in, line by line.
 
 ### Intro & Aesthetics – Your First CLI Superpowers ###
 
-| Command          | What it Does 🧠                                                                                                             | Example 💡                                                                                                               |
+| Command          | What it Does                                                                                                              | Example                                                                                                                |
 | ---------------- | --------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ |
 | `help`           | Lists commands and brief descriptions. You can also type `help <command>` to get help on a specific one.                    | `help` <br> `help dir` <br> `help copy`                                                                                  |
 | `start`          | Opens programs, files, folders, or even websites in a new window.                                                           | `start notepad` <br> `start https://cybersecurity.com` <br> `start .` (opens current folder)                             |
@@ -20,3 +20,27 @@ Let’s dive in, line by line.
 | `prompt`         | Customizes the prompt text you see before each command. Can include variables like path or date.                            | `prompt Hello: $G` <br> `prompt $P$G` (default: current path + `>`) <br> `prompt $D $T $G` (date, time, `>`)             |
 
 
+### Files & Directories – Navigate and Control Your Files Like a Pro ###
+
+| Command  | What it Does                                                 | Example                                                                                                                                       |                  |            |
+| -------- | -------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------- | ---------------- | ---------- |
+| `dir`    | Lists files and folders in the current directory.              | `dir` <br> `dir /b` (bare format) <br> `dir /s *.txt` (find all `.txt` files recursively)                                                       |                  |            |
+| `cd`     | Changes the current directory (folder).                        | `cd Documents` <br> `cd ..` (go back one level) <br> `cd /d D:\Projects` (switch drive + folder)                                                |                  |            |
+| `echo`   | Prints text or writes to files. Great for scripting and notes. | `echo Hello World` <br> `echo Test > file.txt` (overwrite) <br> `echo More text >> file.txt` (append)                                           |                  |            |
+| `more`   | Displays long file content one screen at a time.               | `more bigfile.txt` <br> \`\`\`type file.txt                                                                                                     | more`<br>`dir /s | more\`\`\` |
+| `mkdir`  | Creates one or more directories.                               | `mkdir myFolder` <br> `mkdir folder1 folder2 folder3` <br> `mkdir "C:\Logs\2025\July"`                                                          |                  |            |
+| `rename` | Renames files or folders.                                      | `rename old.txt new.txt` <br> `rename FolderA FolderB` <br> `rename *.log *.txt` (rename file extensions)                                       |                  |            |
+| `xcopy`  | Copies files and directories (more powerful than `copy`).      | `xcopy file.txt D:\Backup` <br> `xcopy /s SourceFolder D:\Dest` (copy with subfolders) <br> `xcopy /y *.txt D:\TextFiles` (no overwrite prompt) |                  |            |
+| `rmdir`  | Removes directories (must be empty unless `/s` is used).       | `rmdir emptyFolder` <br> `rmdir /s backupFolder` (with contents) <br> `rmdir /q /s temp` (quiet mode, no prompt)                                |                  |            |
+| `del`    | Deletes files. Use carefully – no recycle bin!                 | `del file.txt` <br> `del *.log` <br> `del /s /q temp\*.*` (recursive and quiet)                                                                 |                  |            |
+| `attrib` | Shows or changes file attributes (like hidden, read-only).     | `attrib` <br> `attrib +h secret.txt` (hide file) <br> `attrib -r report.docx` (remove read-only)                                                |                  |            |
+
+### Environment Variables – CLI That Knows Where It Is ###
+
+| Variable        | What it Does                                                            | Example                                                                                                 |
+| --------------- | ------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
+| `%cd%`          | Current working directory.                                                | `echo %cd%` <br> `notepad %cd%\readme.txt` <br> `echo Path: %cd% >> log.txt`                              |
+| `%username%`    | Your Windows login username.                                              | `echo %username%` <br> `mkdir C:\Users\%username%\Reports` <br> `echo Logged in as %username% >> log.txt` |
+| `%userprofile%` | Path to your user folder (e.g. `C:\Users\Lorenzo`).                       | `cd %userprofile%` <br> `start %userprofile%\Documents` <br> `echo Home = %userprofile%`                  |
+| `%temp%`        | Path to temporary files folder. Great for throwaway files.                | `cd %temp%` <br> `echo Temp log > %temp%\log.txt` <br> `del %temp%\*.tmp`                                 |
+| `%path%`        | Shows all folders where the system looks for executables. (⚠️ It's long!) | `echo %path%` <br> `set path=%path%;C:\MyTools` <br> `path` (shorter output)                              |
