Update 1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md

--- a/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
+++ b/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
@@ -44,3 +44,25 @@ Let’s dive in, line by line.
 | `%userprofile%` | Path to your user folder (e.g. `C:\Users\Lorenzo`).                       | `cd %userprofile%` <br> `start %userprofile%\Documents` <br> `echo Home = %userprofile%`                  |
 | `%temp%`        | Path to temporary files folder. Great for throwaway files.                | `cd %temp%` <br> `echo Temp log > %temp%\log.txt` <br> `del %temp%\*.tmp`                                 |
 | `%path%`        | Shows all folders where the system looks for executables. (⚠️ It's long!) | `echo %path%` <br> `set path=%path%;C:\MyTools` <br> `path` (shorter output)                              |
+
+### Date & Time – Because Logs Love Timestamps ###
+
+| Command | What it Does                                                                         | Example                                                                                      |
+| ------- | -------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------- |
+| `date`  | Displays or sets the system date. It’ll prompt you unless used carefully.              | `date` <br> `echo %date%` (prints current date) <br> `echo Log created on %date% > log.txt`    |
+| `time`  | Displays or sets the system time. Just like `date`, it’s great for logs or automation. | `time` <br> `echo %time%` (prints current time) <br> `echo Process ended at %time% >> log.txt` |
+
+### Networking Commands – Investigate, Troubleshoot, Defend ###
+
+| Command    | What it Does 🧠                                                                                    | Example 💡                                                                                                                                                               |                                  |
+| ---------- | -------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------- |
+| `hostname` | Displays the name of your machine. Useful in logging or remote access.                             | `hostname` <br> `echo Host: %computername% >> log.txt` <br> *Use in scripts to tag logs per machine*                                                                     |                                  |
+| `ipconfig` | Shows IP, subnet mask, gateway, and more. First step in checking network config.                   | `ipconfig` <br> `ipconfig /all` (detailed) <br> `ipconfig /release && ipconfig /renew` (get new IP)                                                                      |                                  |
+| `ping`     | Checks if a host is reachable and how fast packets travel. Basic connectivity test.                | `ping google.com` <br> `ping 8.8.8.8` <br> `ping localhost`                                                                                                              |                                  |
+| `nslookup` | Resolves domain names to IP addresses and vice versa. Useful for DNS investigation.                | `nslookup google.com` <br> `nslookup 8.8.8.8` <br> `nslookup example.com 1.1.1.1` (use specific DNS)                                                                     |                                  |
+| `tracert`  | Shows the path packets take to reach a host — useful for diagnosing routing issues.                | `tracert google.com` <br> `tracert 8.8.8.8` <br> `tracert example.com > trace.txt`                                                                                       |                                  |
+| `netstat`  | Displays open ports, listening services, and connections. Great for detecting suspicious activity. | `netstat` <br> `netstat -ano` (with PIDs) <br> \`\`\`netstat -an                                                                                                         | find ":443"\`\`\` (filter HTTPS) |
+| `arp -a`   | Shows ARP table: IP-to-MAC mappings. Useful in detecting ARP spoofing.                             | `arp -a` <br> `arp -a 192.168.1.1` <br> *Compare MACs to known devices*                                                                                                  |                                  |
+| `netsh`    | Powerful tool for network config, including Wi-Fi, firewall, and interface settings.               | `netsh wlan show profile` <br> `netsh wlan show profile "<Your WLAN id>" key=clear` <br> `netsh advfirewall set allprofiles state off` (⚠️ disables firewall!) |                                  |
+| `getmac`   | Displays the MAC addresses of all network interfaces.                                              | `getmac` <br> `getmac /v` (verbose) <br> *Use to verify interface identity*                                                                                              |                                  |
+
