Update 1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md

--- a/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
+++ b/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
@@ -54,7 +54,7 @@ Let’s dive in, line by line.
 
 ### Networking Commands – Investigate, Troubleshoot, Defend ###
 
-| Command    | What it Does 🧠                                                                                    | Example 💡                                                                                                                                                               |                                  |
+| Command    | What it Does                                                                                     | Example                                                                                                                                                                |                                  |
 | ---------- | -------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------- |
 | `hostname` | Displays the name of your machine. Useful in logging or remote access.                             | `hostname` <br> `echo Host: %computername% >> log.txt` <br> *Use in scripts to tag logs per machine*                                                                     |                                  |
 | `ipconfig` | Shows IP, subnet mask, gateway, and more. First step in checking network config.                   | `ipconfig` <br> `ipconfig /all` (detailed) <br> `ipconfig /release && ipconfig /renew` (get new IP)                                                                      |                                  |
@@ -65,4 +65,23 @@ Let’s dive in, line by line.
 | `arp -a`   | Shows ARP table: IP-to-MAC mappings. Useful in detecting ARP spoofing.                             | `arp -a` <br> `arp -a 192.168.1.1` <br> *Compare MACs to known devices*                                                                                                  |                                  |
 | `netsh`    | Powerful tool for network config, including Wi-Fi, firewall, and interface settings.               | `netsh wlan show profile` <br> `netsh wlan show profile "<Your WLAN id>" key=clear` <br> `netsh advfirewall set allprofiles state off` (⚠️ disables firewall!) |                                  |
 | `getmac`   | Displays the MAC addresses of all network interfaces.                                              | `getmac` <br> `getmac /v` (verbose) <br> *Use to verify interface identity*                                                                                              |                                  |
+
+
+### Shutdown – Turn it off the smart way ###
+
+| Command    | What it Does                                                                                     | Example                                                                                                                |
+| ---------- | -------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------ |
+| `shutdown` | Shuts down, restarts, or logs off a computer with lots of flexible options. Can also be scheduled. | `shutdown /s /t 0` (shutdown now) <br> `shutdown /r /t 10` (restart in 10 sec) <br> `shutdown /l` (log off current user) |
+
+
+### Processes & OS Info – Who’s running what, and how? ###
+
+| Command       | What it Does                                                                                         | Example                                                                                              |                                                                               |
+| ------------- | ------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------- |
+| `winver`      | Opens a window showing the Windows version and build. Great for documentation or vulnerability checks. | `winver` <br> *No options needed* <br> *Not a CLI output – it opens a GUI window*                      |                                                                               |
+| `tasklist`    | Lists all currently running processes. Similar to Task Manager but CLI-based.                          | `tasklist` <br> \`\`\`tasklist                                                                         | find "chrome"`<br>`tasklist /fi "memusage gt 100000"\`\*\* (filter by memory) |
+| `taskkill`    | Kills a running process by name or PID.                                                                | `taskkill /IM notepad.exe` <br> `taskkill /PID 1234` <br> `taskkill /F /IM chrome.exe` (force kill)    |                                                                               |
+| `driverquery` | Lists all installed drivers — useful to check for rogue or outdated ones.                              | `driverquery` <br> `driverquery /v` (verbose) <br> `driverquery /fo csv > drivers.csv` (save as file)  |                                                                               |
+| `net user`    | Shows all user accounts or manages them. Helpful for checking for rogue accounts.                      | `net user` <br> `net user username` <br> `net user newuser password /add` (create user – admin needed) |                                                                               |
+
 
