Update 1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md

--- a/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
+++ b/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
@@ -83,5 +83,17 @@ Let’s dive in, line by line.
 | `taskkill`    | Kills a running process by name or PID.                                                                | `taskkill /IM notepad.exe` <br> `taskkill /PID 1234` <br> `taskkill /F /IM chrome.exe` (force kill)    |                                                                               |
 | `driverquery` | Lists all installed drivers — useful to check for rogue or outdated ones.                              | `driverquery` <br> `driverquery /v` (verbose) <br> `driverquery /fo csv > drivers.csv` (save as file)  |                                                                               |
 | `net user`    | Shows all user accounts or manages them. Helpful for checking for rogue accounts.                      | `net user` <br> `net user username` <br> `net user newuser password /add` (create user – admin needed) |                                                                               |
+### Scripting Basics – Automate the Boring Stuff with .BAT Files ###
 
+Scripting lets you run a series of commands automatically. In Windows, these scripts are simple .bat files — just plain text files with commands, run in sequence. Example: my_script.bat.
+
+#### User Input – Ask something, use the answer ####
+
+```bat
+@echo off
+set /p name=What's your name?
+echo Hello, %name%! Welcome to the CLI course!
+pause
+```
+✅ set /p waits for input and stores it in a variable.
 
