Update 1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md

--- a/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
+++ b/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
@@ -97,3 +97,31 @@ pause
 ```
 ✅ set /p waits for input and stores it in a variable.
 
+### Loop – Repeat something ###
+
+```bat
+@echo off
+for /L %%i in (1,1,5) do (
+  echo This is line %%i
+)
+pause
+```
+✅ This prints lines 1 to 5. (start,step,end) format.
+
+###  Condition – If this, do that ###
+
+```bat
+@echo off
+set /p answer=Do you want to shut down? (yes/no): 
+if /I "%answer%"=="yes" (
+  shutdown /s /t 5
+) else (
+  echo Phew, that was close.
+)
+pause
+```
+
+✅ if checks conditions. /I makes it case-insensitive.
+
+### Combine: A Real-World Mini Script ###
+
