Update 1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md

--- a/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
+++ b/DOMAIN1: Security and Risk Management/1.L.7 Hack the Prompt: Windows CLI for Security Beginners.md
@@ -125,3 +125,11 @@ pause
 
 ### Combine: A Real-World Mini Script ###
 
+```bat
+@echo off
+echo Hello, %username%
+echo Checking your IP info...
+ipconfig > %temp%\ip_log.txt
+echo IP info saved in: %temp%\ip_log.txt
+pause
+```
