Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -18,6 +18,7 @@ Redundancy – Duplicating critical components to ensure system availability and
 
 Virtualization – Abstracting physical resources to enhance security, scalability, and efficiency, as seen in virtual machines and containerized environments.
 
+```mermaid
 flowchart TD
     A[ISO/IEC 19249 Architectural Principles]
 
@@ -43,3 +44,8 @@ flowchart TD
     F --> F1[Abstract physical resources]
     F --> F2[Enhance security, scalability, efficiency]
     F --> F3[Examples: VMs, containers]
+
+    classDef center fill:#ffffff,color:#000000,stroke:#000000,stroke-width:1px,font-weight:bold
+    classDef node fill:#e0e0e0,color:#000000,stroke:#000000,stroke-width:1px
+```
+
