Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -101,8 +101,28 @@ An **object** is a passive entity that contains or receives information, like a 
 
 Think of it like this:
 
-If you open a file on your computer, you (the user) are the subject, and the file is the object.
+- If you open a file on your computer, you (the user) are the subject, and the file is the object.
 
-If a process (like a backup program) accesses your files, the backup process is the subject, and your files are the objects.
+- If a process (like a backup program) accesses your files, the backup process is the subject, and your files are the objects.
 
 The relationship is always about who is trying to access what.
+
+Transitive trust is when trust between two systems automatically extends to a third system. Imagine this:
+
+You trust your best friend (A).
+
+Your friend trusts their coworker (B).
+
+Because you trust your friend, you also automatically trust their coworker (C), even if you've never met them.
+
+In cybersecurity, this can happen with network authentication or permissions:
+
+If System A trusts System B, and System B trusts System C, then System A might also trust System C—even if it wasn’t intended!
+
+This can be risky because an attacker could compromise System C and use that trust chain to gain access to System A.
+
+:bulb: In PKI, transitive trust occurs when a root certificate authority (CA) trusts an intermediate CA, which then issues certificates to end entities. Any entity that trusts the root CA also implicitly trusts certificates issued by the intermediate CA.
+
+An *open system* is designed for interoperability, often supporting open standards, public APIs, and open-source components. While this fosters innovation and flexibility, it also expands the attack surface, requiring strong security controls to mitigate risks. A *closed system*, in contrast, restricts access to its internal workings, limiting integrations and external modifications, which can enhance security but reduce adaptability. In cybersecurity, open systems require robust API security measures, while closed systems rely on strict access controls to maintain integrity.
+
+
