Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -76,7 +76,7 @@ flowchart TD
 
     A --> D[Centralized Parameter Validation]
     D --> D1[Check all inputs properly]
-    D --> D2[Prevent vulnerabilities (e.g., SQL injection)]
+    D --> D2[Prevent vulnerabilities - e.g., SQL injection]
 
     A --> E[Centralized General Security Services]
     E --> E1[Consolidate security functions]
