Update 3.01 Research, implement, and manage engineering processes using secure design principles.md

--- a/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
+++ b/DOMAIN3: Security Architecture and Engineering/3.01 Research, implement, and manage engineering processes using secure design principles.md
@@ -123,6 +123,6 @@ This can be risky because an attacker could compromise System C and use that tru
 
 :bulb: In PKI, transitive trust occurs when a root certificate authority (CA) trusts an intermediate CA, which then issues certificates to end entities. Any entity that trusts the root CA also implicitly trusts certificates issued by the intermediate CA.
 
-An *open system* is designed for interoperability, often supporting open standards, public APIs, and open-source components. While this fosters innovation and flexibility, it also expands the attack surface, requiring strong security controls to mitigate risks. A *closed system*, in contrast, restricts access to its internal workings, limiting integrations and external modifications, which can enhance security but reduce adaptability. In cybersecurity, open systems require robust API security measures, while closed systems rely on strict access controls to maintain integrity.
+An **open system** is designed for interoperability, often supporting open standards, public APIs, and open-source components. While this fosters innovation and flexibility, it also expands the attack surface, requiring strong security controls to mitigate risks. A **closed system**, in contrast, restricts access to its internal workings, limiting integrations and external modifications, which can enhance security but reduce adaptability. In cybersecurity, open systems require robust API security measures, while closed systems rely on strict access controls to maintain integrity.
 
 
